--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
   },
+  "homepage": "http://m1mmseen.github.io/Tic-Tac-Toe-React-Starting-Project",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
